fix: product property - soldAmount
